@@ -4,6 +4,7 @@ Complete refactoring
 * Added new demosaicing algorithms, RCD is now the default one
 * Added support for FITS decompression and compression with Rice/Gzip and HCompress methods
 * Added support for quantization and HCompress scale factor settings for FITS compression
+* Added new functions to extract Ha and Ha/OII from RGB images
 * New preference entries for FITS compression settings
 * New UI with a single window
 * New native image format: 32-bit floating point image
